deployment/kubernetes/tls-transformer.yaml
# SPDX-License-Identifier: Apache-2.0
# Copyright Contributors to the Egeria project.

# Include when using full-stack or frontdoor TLS
---
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: egeria-connector-statefulset-tls-transformer
patch: |-
  [...]
target:
  kind: StatefulSet
  name: egeria-connector-ss
---
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: egeria-connector-ingress-open-metadata-tls-transformer
patch: |-
  - op: add
    path: /spec/tls
    value:
    - hosts:
      - $(INGRESS_HOST)
      - '*.$(INGRESS_HOST)'
      secretName: sas-ingress-certificate
target:
  kind: Ingress
  name: egeria-connector-ingress-open-metadata
---
apiVersion: builtin
kind: PatchTransformer
metadata:
  name: egeria-connector-ingress-servers-tls-transformer
patch: |-
  - op: add
    path: /spec/tls
    value:
    - hosts:
      - $(INGRESS_HOST)
      - '*.$(INGRESS_HOST)'
      secretName: sas-ingress-certificate
target:
  kind: Ingress
  name: egeria-connector-ingress-servers
